# openpose_ros_wrapper

./: README.md  tags
openpose_ros_wrapper_msgs/: CMakeLists.txt  package.xml
openpose_ros_wrapper_msgs/msg/: BodyPartDetection.msg  BodyPartDetection3d.msg  PersonsArray.msg
openpose_ros_wrapper_msgs/srv/: GetPersons.srv
openpose_wrapper/: CMakeLists.txt  package.xml
openpose_wrapper/src/: openpose.h  openpose_server_node.cpp  openpose_wrapper_3d_node.cpp  openpose_wrapper_nico_node.cpp  openpose_wrapper_node.cpp  wrapper.cpp
